change basic colors based on solarized syntax source code

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,16 +1,19 @@
-@base00: #ffffff;
-@base01: #303030;
-@base02: #B9D2FF;
-@base03: #b0b0b0;
-@base04: #d0d0d0;
-@base05: #e0e0e0;
-@base06: #606060;
-@base07: #000000;
-@base08: #fb0120;
-@base09: #fc6d24;
-@base0A: #fda331;
-@base0B: #6E9A18;
-@base0C: #3427D9;
-@base0D: #6fb3d2;
-@base0E: #AB4397;
-@base0F: #be643c;
+// Base colors
+@color_white:       #ffffff;
+@color_darkwhite:   #e0e0e0;
+@color_lightgray:   #b1b1b1;
+@color_gray:        #888888;
+@color_darkgray:    #606060;
+@color_lightblack:  #303030;
+@color_black:       #000000;
+
+// Accent colors
+@color_whiteorange: #ffe0d9;
+@color_lightorange: #ffa08b;
+@color_orange:      #eb613f;
+@color_purple:      #7e1dd8;
+@color_red:         #d12222;
+@color_green:       #6ad142;
+@color_skyblue:     #6cbae7;
+@color_blue:        #3427D9;
+@color_pink:        #c51e85;
