make orange & purple darker

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -9,10 +9,10 @@
 
 // Accent colors
 @color_whiteorange: #ffe0d9;
-@color_lightorange: #ffa08b;
-@color_orange:      #eb613f;
-@color_purple:      #7e1dd8;
-@color_red:         #d12222;
+@color_lightorange: #eb8c76;
+@color_orange:      #ca2b03;
+@color_purple:      #6c0dc5;
+@color_red:         #ad1313;
 @color_green:       #6ad142;
 @color_skyblue:     #6cbae7;
 @color_blue:        #3427D9;
